[package]
name = "mona"
version = "0.1.0"
edition = "2024"

[dependencies]
anitomy = "0.2"
axum = "0.8"
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
url = "2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
