[project]
name = "mona"
version = "0.1.0"
description = "anime poster + fanart api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anitopy==2.1.1",
    "fastapi==0.116.1",
    "httpx[http2]==0.28.1",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "uvicorn==0.37.0",
]

[dependency-groups]
dev = [
    "pyright==1.1.405",
    "pytest==8.4.2",
    "pytest-asyncio==1.1.0",
]
