[project]
name = "mona"
version = "0.1.0"
description = "anime poster + fanart api"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anitopy==2.1.1",
    "fastapi==0.123.8",
    "httpx[http2]==0.28.1",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "uvicorn[standard]==0.38.0",
    "theine==2.0.0"
]

[dependency-groups]
dev = [
    "pyright==1.1.407",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
]
